--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "dashjs": "^4.7.4",
+    "next": "14.2.13",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   }
 }
