--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "screenfull": "^6.0.2"
   }
 }
